// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWrapper default match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Component
        checkBoxIsMonotone={false}
        checkboxColor="orange"
        closeOnChangeSingle={true}
        isMulti={false}
        options={
          [
            {
              "label": "Lorem ipsum 1",
              "value": "lorem-ipsum-1",
            },
            {
              "label": "Lorem ipsum 2",
              "value": "lorem-ipsum-2",
            },
            {
              "label": "Lorem ipsum 3",
              "value": "lorem-ipsum-3",
            },
            {
              "label": "Lorem ipsum 4",
              "value": "lorem-ipsum-4",
            },
          ]
        }
        placement="bottomLeft"
        popoverWide={false}
        trigger={
          [
            "click",
          ]
        }
        truncateOptions={true}
        value={
          {
            "label": "Lorem ipsum 2",
            "value": "lorem-ipsum-2",
          }
        }
      >
        <div
          className="HoiPoi__SelectWrapper__root-1-0"
        >
          <Popover
            className="HoiPoi__SelectWrapper__Popover-1-1"
            content={
              <Unknown
                checkBoxIsMonotone={false}
                checkboxColor="orange"
                classes={
                  {
                    "Popover": "HoiPoi__SelectWrapper__Popover-1-1",
                    "PopoverWide": "HoiPoi__SelectWrapper__PopoverWide-1-2",
                    "customOptions": "HoiPoi__SelectWrapper__customOptions-1-5",
                    "loaderContainer": "HoiPoi__SelectWrapper__loaderContainer-1-4",
                    "noOptions": "HoiPoi__SelectWrapper__noOptions-1-3",
                    "option": "HoiPoi__SelectWrapper__option-1-9",
                    "optionCheckbox": "HoiPoi__SelectWrapper__optionCheckbox-1-15",
                    "optionDisabled": "HoiPoi__SelectWrapper__optionDisabled-1-12",
                    "optionDisabledAvatar": "HoiPoi__SelectWrapper__optionDisabledAvatar-1-14",
                    "optionDisabledIcon": "HoiPoi__SelectWrapper__optionDisabledIcon-1-13",
                    "optionLabel": "HoiPoi__SelectWrapper__optionLabel-1-21",
                    "optionLabelAvatar": "HoiPoi__SelectWrapper__optionLabelAvatar-1-25",
                    "optionLabelBullet": "HoiPoi__SelectWrapper__optionLabelBullet-1-16",
                    "optionLabelBulletDanger": "HoiPoi__SelectWrapper__optionLabelBulletDanger-1-19",
                    "optionLabelBulletDisabled": "HoiPoi__SelectWrapper__optionLabelBulletDisabled-1-17",
                    "optionLabelBulletPrimary": "HoiPoi__SelectWrapper__optionLabelBulletPrimary-1-18",
                    "optionLabelBulletSuccess": "HoiPoi__SelectWrapper__optionLabelBulletSuccess-1-20",
                    "optionLabelCustomIcon": "HoiPoi__SelectWrapper__optionLabelCustomIcon-1-24",
                    "optionLabelIcon": "HoiPoi__SelectWrapper__optionLabelIcon-1-23",
                    "optionList": "HoiPoi__SelectWrapper__optionList-1-6",
                    "optionListGroup": "HoiPoi__SelectWrapper__optionListGroup-1-7",
                    "optionListGroupLabel": "HoiPoi__SelectWrapper__optionListGroupLabel-1-8",
                    "optionSelected": "HoiPoi__SelectWrapper__optionSelected-1-11",
                    "optionSubLabel": "HoiPoi__SelectWrapper__optionSubLabel-1-22",
                    "optionTwoLines": "HoiPoi__SelectWrapper__optionTwoLines-1-10",
                    "root": "HoiPoi__SelectWrapper__root-1-0",
                  }
                }
                isLoading={false}
                isMulti={false}
                mappedValue={
                  {
                    "lorem-ipsum-2": {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    },
                  }
                }
                onChange={[Function]}
                options={
                  [
                    {
                      "label": "Lorem ipsum 1",
                      "value": "lorem-ipsum-1",
                    },
                    {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    },
                    {
                      "label": "Lorem ipsum 3",
                      "value": "lorem-ipsum-3",
                    },
                    {
                      "label": "Lorem ipsum 4",
                      "value": "lorem-ipsum-4",
                    },
                  ]
                }
                override={
                  {
                    "Loader": {},
                    "Popover": {},
                    "loaderContainer": {},
                    "noOptions": {},
                    "option": {},
                    "optionCheckbox": {},
                    "optionDisabled": {},
                    "optionDisabledAvatar": {},
                    "optionLabel": {},
                    "optionLabelAvatar": {},
                    "optionLabelBlock": {},
                    "optionLabelBullet": {},
                    "optionLabelBulletDanger": {},
                    "optionLabelBulletDisabled": {},
                    "optionLabelBulletPrimary": {},
                    "optionLabelBulletSuccess": {},
                    "optionLabelCustomIcon": {},
                    "optionLabelIcon": {},
                    "optionList": {},
                    "optionListGroup": {},
                    "optionListGroupLabel": {},
                    "optionSelect": {},
                    "optionSubLabel": {},
                    "optionTwoLines": {},
                    "root": {},
                  }
                }
                truncateOptions={true}
                value={
                  {
                    "label": "Lorem ipsum 2",
                    "value": "lorem-ipsum-2",
                  }
                }
              />
            }
            onVisibleChange={[Function]}
            overrides={{}}
            placement="bottomLeft"
            trigger={
              [
                "click",
              ]
            }
          >
            <ForwardRef(Tooltip)
              onVisibleChange={[Function]}
              overlay={
                <Unknown
                  checkBoxIsMonotone={false}
                  checkboxColor="orange"
                  classes={
                    {
                      "Popover": "HoiPoi__SelectWrapper__Popover-1-1",
                      "PopoverWide": "HoiPoi__SelectWrapper__PopoverWide-1-2",
                      "customOptions": "HoiPoi__SelectWrapper__customOptions-1-5",
                      "loaderContainer": "HoiPoi__SelectWrapper__loaderContainer-1-4",
                      "noOptions": "HoiPoi__SelectWrapper__noOptions-1-3",
                      "option": "HoiPoi__SelectWrapper__option-1-9",
                      "optionCheckbox": "HoiPoi__SelectWrapper__optionCheckbox-1-15",
                      "optionDisabled": "HoiPoi__SelectWrapper__optionDisabled-1-12",
                      "optionDisabledAvatar": "HoiPoi__SelectWrapper__optionDisabledAvatar-1-14",
                      "optionDisabledIcon": "HoiPoi__SelectWrapper__optionDisabledIcon-1-13",
                      "optionLabel": "HoiPoi__SelectWrapper__optionLabel-1-21",
                      "optionLabelAvatar": "HoiPoi__SelectWrapper__optionLabelAvatar-1-25",
                      "optionLabelBullet": "HoiPoi__SelectWrapper__optionLabelBullet-1-16",
                      "optionLabelBulletDanger": "HoiPoi__SelectWrapper__optionLabelBulletDanger-1-19",
                      "optionLabelBulletDisabled": "HoiPoi__SelectWrapper__optionLabelBulletDisabled-1-17",
                      "optionLabelBulletPrimary": "HoiPoi__SelectWrapper__optionLabelBulletPrimary-1-18",
                      "optionLabelBulletSuccess": "HoiPoi__SelectWrapper__optionLabelBulletSuccess-1-20",
                      "optionLabelCustomIcon": "HoiPoi__SelectWrapper__optionLabelCustomIcon-1-24",
                      "optionLabelIcon": "HoiPoi__SelectWrapper__optionLabelIcon-1-23",
                      "optionList": "HoiPoi__SelectWrapper__optionList-1-6",
                      "optionListGroup": "HoiPoi__SelectWrapper__optionListGroup-1-7",
                      "optionListGroupLabel": "HoiPoi__SelectWrapper__optionListGroupLabel-1-8",
                      "optionSelected": "HoiPoi__SelectWrapper__optionSelected-1-11",
                      "optionSubLabel": "HoiPoi__SelectWrapper__optionSubLabel-1-22",
                      "optionTwoLines": "HoiPoi__SelectWrapper__optionTwoLines-1-10",
                      "root": "HoiPoi__SelectWrapper__root-1-0",
                    }
                  }
                  isLoading={false}
                  isMulti={false}
                  mappedValue={
                    {
                      "lorem-ipsum-2": {
                        "label": "Lorem ipsum 2",
                        "value": "lorem-ipsum-2",
                      },
                    }
                  }
                  onChange={[Function]}
                  options={
                    [
                      {
                        "label": "Lorem ipsum 1",
                        "value": "lorem-ipsum-1",
                      },
                      {
                        "label": "Lorem ipsum 2",
                        "value": "lorem-ipsum-2",
                      },
                      {
                        "label": "Lorem ipsum 3",
                        "value": "lorem-ipsum-3",
                      },
                      {
                        "label": "Lorem ipsum 4",
                        "value": "lorem-ipsum-4",
                      },
                    ]
                  }
                  override={
                    {
                      "Loader": {},
                      "Popover": {},
                      "loaderContainer": {},
                      "noOptions": {},
                      "option": {},
                      "optionCheckbox": {},
                      "optionDisabled": {},
                      "optionDisabledAvatar": {},
                      "optionLabel": {},
                      "optionLabelAvatar": {},
                      "optionLabelBlock": {},
                      "optionLabelBullet": {},
                      "optionLabelBulletDanger": {},
                      "optionLabelBulletDisabled": {},
                      "optionLabelBulletPrimary": {},
                      "optionLabelBulletSuccess": {},
                      "optionLabelCustomIcon": {},
                      "optionLabelIcon": {},
                      "optionList": {},
                      "optionListGroup": {},
                      "optionListGroupLabel": {},
                      "optionSelect": {},
                      "optionSubLabel": {},
                      "optionTwoLines": {},
                      "root": {},
                    }
                  }
                  truncateOptions={true}
                  value={
                    {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    }
                  }
                />
              }
              overlayClassName="HoiPoi__Popover__root-1-26 HoiPoi__SelectWrapper__Popover-1-1"
              placement="bottomLeft"
              prefixCls="hoi-poi-popover"
              transitionName="hoi-poi-popover--fade"
              trigger={
                [
                  "click",
                ]
              }
            >
              <Trigger
                action={
                  [
                    "click",
                  ]
                }
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  {
                    "bottom": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tc",
                        "bc",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "bottomLeft": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tl",
                        "bl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "bottomRight": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tr",
                        "br",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "left": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "cr",
                        "cl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "leftBottom": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "br",
                        "bl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "leftTop": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tr",
                        "tl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "right": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "cl",
                        "cr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "rightBottom": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bl",
                        "br",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "rightTop": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tl",
                        "tr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "top": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bc",
                        "tc",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "topLeft": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bl",
                        "tl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "topRight": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "br",
                        "tr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                hideAction={[]}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={[Function]}
                popupAlign={{}}
                popupClassName="HoiPoi__Popover__root-1-26 HoiPoi__SelectWrapper__Popover-1-1"
                popupPlacement="bottomLeft"
                popupStyle={{}}
                popupTransitionName="hoi-poi-popover--fade"
                prefixCls="hoi-poi-popover"
                showAction={[]}
              >
                <ForwardRef
                  iconPosition="left"
                  key="trigger"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  overrides={{}}
                  size="medium"
                  type="primary"
                >
                  <button
                    className="HoiPoi__Button__root-1-27 HoiPoi__Button__primary-1-32 HoiPoi__Button__medium-1-40"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                    type="button"
                  >
                    <div
                      className="HoiPoi__Button__content-1-28"
                    >
                      <Text
                        className="HoiPoi__Button__Text-1-29"
                        isTruncated={false}
                        overrides={{}}
                        type="body"
                      >
                        <span
                          className="HoiPoi__Text__root-1-45 HoiPoi__Button__Text-1-29 HoiPoi__Text__body-1-55"
                          style={{}}
                        >
                          Select One
                        </span>
                      </Text>
                    </div>
                  </button>
                </ForwardRef>
              </Trigger>
            </ForwardRef(Tooltip)>
          </Popover>
        </div>
      </Component>
    </JssProvider>
  </ThemeProvider>
</Component>
`;

exports[`SelectWrapper with disabled options match 1`] = `
<Component>
  <ThemeProvider
    theme={
      {
        "colors": {
          "aqua100": "#e4fafd",
          "aqua200": "#cbf3fc",
          "aqua300": "#AEE5F8",
          "aqua400": "#98d5f1",
          "aqua500": "#76bde8",
          "aqua600": "#5695c7",
          "aqua700": "#3b71a7",
          "aqua900": "#16386f",
          "black": "#3c4248",
          "blue100": "#d3e3fe",
          "blue200": "#a7c5fe",
          "blue300": "#7BA4FE",
          "blue400": "#5a89fd",
          "blue500": "#245dfd",
          "blue600": "#1a47d9",
          "blue700": "#1234b6",
          "blue900": "#061879",
          "green100": "#f4fad2",
          "green200": "#e7f6a6",
          "green300": "#A7E675",
          "green400": "#aecd50",
          "green500": "#86ad20",
          "green600": "#6e9417",
          "green700": "#237c10",
          "green900": "#345306",
          "neutral100": "#f9f9fa",
          "neutral150": "#f6f7f9",
          "neutral200": "#f4f5f6",
          "neutral300": "#e9ecee",
          "neutral400": "#dfe2e5",
          "neutral500": "#d4d8dc",
          "neutral600": "#a9b1b9",
          "neutral700": "#7d8a96",
          "neutral800": "#526373",
          "neutral900": "#273c50",
          "neutralBase": "#ffffff",
          "orange100": "#fff1cc",
          "orange200": "#ffde99",
          "orange300": "#FFC766",
          "orange400": "#ffb13f",
          "orange500": "#ff8c00",
          "orange600": "#db6e00",
          "orange700": "#b75400",
          "orange900": "#7a2c00",
          "overlay": "rgba(33,33,33,0.55)",
          "purple100": "#fae3ed",
          "purple200": "#f6c8e1",
          "purple300": "#E5A5CE",
          "purple400": "#cc84b8",
          "purple500": "#aa5b9c",
          "purple600": "#92428b",
          "purple700": "#792d7a",
          "purple900": "#441151",
          "red100": "#ffe5d5",
          "red200": "#ffc5ac",
          "red300": "#FF9E82",
          "red400": "#ff7863",
          "red500": "#ff3b30",
          "red600": "#db2328",
          "red700": "#b7182a",
          "red900": "#7a0929",
          "secondaryOverlay": "rgba(2,168,189,0.10)",
          "shadow": "rgba(0, 0, 0, 0.25)",
          "transparentBlack": "rgba(38, 43, 52, 0.8)",
          "turquoise100": "#c9fbf1",
          "turquoise200": "#95f8ec",
          "turquoise300": "#5EEBE5",
          "turquoise400": "#36d2d8",
          "turquoise500": "#00a8be",
          "turquoise600": "#0083a3",
          "turquoise700": "#006388",
          "turquoise900": "#00335b",
          "yellow100": "#fdf6cb",
          "yellow200": "#fcec97",
          "yellow300": "#F8DC63",
          "yellow400": "#f1cb3c",
          "yellow500": "#e9b200",
          "yellow600": "#c89400",
          "yellow700": "#a77700",
          "yellow900": "#6f4a00",
        },
        "effects": {
          "boxShadow": "0 3px 9px 0 rgba(0, 0, 0, 0.25)",
          "boxShadow24": {
            "boxShadow": "0px 18px 40px rgba(39, 60, 80, 0.4)",
          },
          "buttonActive": {
            "boxShadow": "inset 0 -2px 4px 0 rgba(51, 51, 51, 0.23)",
          },
        },
        "typography": {
          "badges": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 10,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "bigText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "letterSpacing": 0.5,
          },
          "body": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 400,
            "letterSpacing": 0.6,
            "lineHeight": "20px",
          },
          "body1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.5,
            "lineHeight": "28px",
          },
          "button": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.6,
            "lineHeight": "16px",
          },
          "caption": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 400,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "captionMedium": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 0.4,
            "lineHeight": "16px",
          },
          "defaultText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "letterSpacing": 0.5,
          },
          "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
          "fontSizeBase": 14,
          "fontSizeSmall": 11,
          "h1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 96,
            "fontWeight": 300,
            "letterSpacing": -1.5,
            "lineHeight": "112px",
          },
          "h2": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 60,
            "fontWeight": 300,
            "letterSpacing": -0.5,
            "lineHeight": "71px",
          },
          "h3": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 48,
            "fontWeight": 400,
            "lineHeight": "57px",
          },
          "h4": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 34,
            "fontWeight": 400,
            "letterSpacing": 0.25,
            "lineHeight": "40px",
          },
          "h5": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 24,
            "fontWeight": 400,
            "lineHeight": "28px",
          },
          "h6": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 20,
            "fontWeight": 500,
            "letterSpacing": 0.25,
            "lineHeight": "24px",
          },
          "largeText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "letterSpacing": 0.5,
          },
          "letterSpacing": 0.5,
          "lineHeightBase": 1.5,
          "overline": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 12,
            "fontWeight": 500,
            "letterSpacing": 2,
            "lineHeight": "16px",
            "textTransform": "uppercase",
          },
          "smallText": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 11,
            "letterSpacing": 0.5,
          },
          "subtitle": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 14,
            "fontWeight": 500,
            "letterSpacing": 0.09,
            "lineHeight": "20px",
          },
          "subtitle1": {
            "fontFamily": ""Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif",
            "fontSize": 16,
            "fontWeight": 400,
            "letterSpacing": 0.15,
            "lineHeight": "24px",
          },
        },
        "utils": {
          "scrollbar": {
            "&::-webkit-scrollbar": {
              "height": 17,
              "width": 17,
            },
            "&::-webkit-scrollbar-thumb": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
            "&::-webkit-scrollbar-thumb:window-inactive": {
              "background": "#dfe2e5",
              "backgroundClip": "content-box",
              "border": "4px solid rgba(0, 0, 0, 0)",
              "borderRadius": 10,
            },
          },
          "selection": {
            "& ::-moz-selection": {
              "backgroundColor": "#ffde99",
            },
            "& ::selection": {
              "backgroundColor": "#ffde99",
            },
          },
        },
      }
    }
  >
    <JssProvider
      classNamePrefix="HoiPoi__"
      generateId={[Function]}
      jss={
        Jss {
          "generateId": [Function],
          "id": 3,
<<<<<<< HEAD
          "options": Object {
=======
          "options": {
>>>>>>> updating/18-11-22
            "Renderer": [Function],
            "createGenerateId": [Function],
            "id": {
              "minify": false,
            },
            "plugins": [],
          },
          "plugins": PluginsRegistry {
            "plugins": {
              "external": [
                {
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                  "onUpdate": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onProcessRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                  "onProcessRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onProcessRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onProcessStyle": [Function],
                },
              ],
              "internal": [
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onChangeValue": [Function],
                  "onCreateRule": [Function],
                  "onProcessStyle": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
                {
                  "onCreateRule": [Function],
                },
              ],
            },
            "registry": {
              "onChangeValue": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onCreateRule": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessRule": [
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onProcessSheet": [],
              "onProcessStyle": [
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
                [Function],
              ],
              "onUpdate": [
                [Function],
              ],
            },
          },
          "version": "10.9.2",
        }
      }
    >
      <Component
        checkBoxIsMonotone={false}
        checkboxColor="orange"
        closeOnChangeSingle={true}
        isMulti={false}
        options={
          [
            {
              "isDisabled": true,
              "label": "Lorem ipsum 1",
              "value": "lorem-ipsum-1",
            },
            {
              "label": "Lorem ipsum 2",
              "value": "lorem-ipsum-2",
            },
            {
              "isDisabled": true,
              "label": "Lorem ipsum 3",
              "value": "lorem-ipsum-3",
            },
            {
              "label": "Lorem ipsum 4",
              "value": "lorem-ipsum-4",
            },
          ]
        }
        placement="bottomLeft"
        popoverWide={false}
        trigger={
          [
            "click",
          ]
        }
        truncateOptions={true}
        value={
          {
            "label": "Lorem ipsum 2",
            "value": "lorem-ipsum-2",
          }
        }
      >
        <div
          className="HoiPoi__SelectWrapper__root-2-0"
        >
          <Popover
            className="HoiPoi__SelectWrapper__Popover-2-1"
            content={
              <Unknown
                checkBoxIsMonotone={false}
                checkboxColor="orange"
                classes={
                  {
                    "Popover": "HoiPoi__SelectWrapper__Popover-2-1",
                    "PopoverWide": "HoiPoi__SelectWrapper__PopoverWide-2-2",
                    "customOptions": "HoiPoi__SelectWrapper__customOptions-2-5",
                    "loaderContainer": "HoiPoi__SelectWrapper__loaderContainer-2-4",
                    "noOptions": "HoiPoi__SelectWrapper__noOptions-2-3",
                    "option": "HoiPoi__SelectWrapper__option-2-9",
                    "optionCheckbox": "HoiPoi__SelectWrapper__optionCheckbox-2-15",
                    "optionDisabled": "HoiPoi__SelectWrapper__optionDisabled-2-12",
                    "optionDisabledAvatar": "HoiPoi__SelectWrapper__optionDisabledAvatar-2-14",
                    "optionDisabledIcon": "HoiPoi__SelectWrapper__optionDisabledIcon-2-13",
                    "optionLabel": "HoiPoi__SelectWrapper__optionLabel-2-21",
                    "optionLabelAvatar": "HoiPoi__SelectWrapper__optionLabelAvatar-2-25",
                    "optionLabelBullet": "HoiPoi__SelectWrapper__optionLabelBullet-2-16",
                    "optionLabelBulletDanger": "HoiPoi__SelectWrapper__optionLabelBulletDanger-2-19",
                    "optionLabelBulletDisabled": "HoiPoi__SelectWrapper__optionLabelBulletDisabled-2-17",
                    "optionLabelBulletPrimary": "HoiPoi__SelectWrapper__optionLabelBulletPrimary-2-18",
                    "optionLabelBulletSuccess": "HoiPoi__SelectWrapper__optionLabelBulletSuccess-2-20",
                    "optionLabelCustomIcon": "HoiPoi__SelectWrapper__optionLabelCustomIcon-2-24",
                    "optionLabelIcon": "HoiPoi__SelectWrapper__optionLabelIcon-2-23",
                    "optionList": "HoiPoi__SelectWrapper__optionList-2-6",
                    "optionListGroup": "HoiPoi__SelectWrapper__optionListGroup-2-7",
                    "optionListGroupLabel": "HoiPoi__SelectWrapper__optionListGroupLabel-2-8",
                    "optionSelected": "HoiPoi__SelectWrapper__optionSelected-2-11",
                    "optionSubLabel": "HoiPoi__SelectWrapper__optionSubLabel-2-22",
                    "optionTwoLines": "HoiPoi__SelectWrapper__optionTwoLines-2-10",
                    "root": "HoiPoi__SelectWrapper__root-2-0",
                  }
                }
                isLoading={false}
                isMulti={false}
                mappedValue={
                  {
                    "lorem-ipsum-2": {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    },
                  }
                }
                onChange={[Function]}
                options={
                  [
                    {
                      "isDisabled": true,
                      "label": "Lorem ipsum 1",
                      "value": "lorem-ipsum-1",
                    },
                    {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    },
                    {
                      "isDisabled": true,
                      "label": "Lorem ipsum 3",
                      "value": "lorem-ipsum-3",
                    },
                    {
                      "label": "Lorem ipsum 4",
                      "value": "lorem-ipsum-4",
                    },
                  ]
                }
                override={
                  {
                    "Loader": {},
                    "Popover": {},
                    "loaderContainer": {},
                    "noOptions": {},
                    "option": {},
                    "optionCheckbox": {},
                    "optionDisabled": {},
                    "optionDisabledAvatar": {},
                    "optionLabel": {},
                    "optionLabelAvatar": {},
                    "optionLabelBlock": {},
                    "optionLabelBullet": {},
                    "optionLabelBulletDanger": {},
                    "optionLabelBulletDisabled": {},
                    "optionLabelBulletPrimary": {},
                    "optionLabelBulletSuccess": {},
                    "optionLabelCustomIcon": {},
                    "optionLabelIcon": {},
                    "optionList": {},
                    "optionListGroup": {},
                    "optionListGroupLabel": {},
                    "optionSelect": {},
                    "optionSubLabel": {},
                    "optionTwoLines": {},
                    "root": {},
                  }
                }
                truncateOptions={true}
                value={
                  {
                    "label": "Lorem ipsum 2",
                    "value": "lorem-ipsum-2",
                  }
                }
              />
            }
            onVisibleChange={[Function]}
            overrides={{}}
            placement="bottomLeft"
            trigger={
              [
                "click",
              ]
            }
          >
            <ForwardRef(Tooltip)
              onVisibleChange={[Function]}
              overlay={
                <Unknown
                  checkBoxIsMonotone={false}
                  checkboxColor="orange"
                  classes={
                    {
                      "Popover": "HoiPoi__SelectWrapper__Popover-2-1",
                      "PopoverWide": "HoiPoi__SelectWrapper__PopoverWide-2-2",
                      "customOptions": "HoiPoi__SelectWrapper__customOptions-2-5",
                      "loaderContainer": "HoiPoi__SelectWrapper__loaderContainer-2-4",
                      "noOptions": "HoiPoi__SelectWrapper__noOptions-2-3",
                      "option": "HoiPoi__SelectWrapper__option-2-9",
                      "optionCheckbox": "HoiPoi__SelectWrapper__optionCheckbox-2-15",
                      "optionDisabled": "HoiPoi__SelectWrapper__optionDisabled-2-12",
                      "optionDisabledAvatar": "HoiPoi__SelectWrapper__optionDisabledAvatar-2-14",
                      "optionDisabledIcon": "HoiPoi__SelectWrapper__optionDisabledIcon-2-13",
                      "optionLabel": "HoiPoi__SelectWrapper__optionLabel-2-21",
                      "optionLabelAvatar": "HoiPoi__SelectWrapper__optionLabelAvatar-2-25",
                      "optionLabelBullet": "HoiPoi__SelectWrapper__optionLabelBullet-2-16",
                      "optionLabelBulletDanger": "HoiPoi__SelectWrapper__optionLabelBulletDanger-2-19",
                      "optionLabelBulletDisabled": "HoiPoi__SelectWrapper__optionLabelBulletDisabled-2-17",
                      "optionLabelBulletPrimary": "HoiPoi__SelectWrapper__optionLabelBulletPrimary-2-18",
                      "optionLabelBulletSuccess": "HoiPoi__SelectWrapper__optionLabelBulletSuccess-2-20",
                      "optionLabelCustomIcon": "HoiPoi__SelectWrapper__optionLabelCustomIcon-2-24",
                      "optionLabelIcon": "HoiPoi__SelectWrapper__optionLabelIcon-2-23",
                      "optionList": "HoiPoi__SelectWrapper__optionList-2-6",
                      "optionListGroup": "HoiPoi__SelectWrapper__optionListGroup-2-7",
                      "optionListGroupLabel": "HoiPoi__SelectWrapper__optionListGroupLabel-2-8",
                      "optionSelected": "HoiPoi__SelectWrapper__optionSelected-2-11",
                      "optionSubLabel": "HoiPoi__SelectWrapper__optionSubLabel-2-22",
                      "optionTwoLines": "HoiPoi__SelectWrapper__optionTwoLines-2-10",
                      "root": "HoiPoi__SelectWrapper__root-2-0",
                    }
                  }
                  isLoading={false}
                  isMulti={false}
                  mappedValue={
                    {
                      "lorem-ipsum-2": {
                        "label": "Lorem ipsum 2",
                        "value": "lorem-ipsum-2",
                      },
                    }
                  }
                  onChange={[Function]}
                  options={
                    [
                      {
                        "isDisabled": true,
                        "label": "Lorem ipsum 1",
                        "value": "lorem-ipsum-1",
                      },
                      {
                        "label": "Lorem ipsum 2",
                        "value": "lorem-ipsum-2",
                      },
                      {
                        "isDisabled": true,
                        "label": "Lorem ipsum 3",
                        "value": "lorem-ipsum-3",
                      },
                      {
                        "label": "Lorem ipsum 4",
                        "value": "lorem-ipsum-4",
                      },
                    ]
                  }
                  override={
                    {
                      "Loader": {},
                      "Popover": {},
                      "loaderContainer": {},
                      "noOptions": {},
                      "option": {},
                      "optionCheckbox": {},
                      "optionDisabled": {},
                      "optionDisabledAvatar": {},
                      "optionLabel": {},
                      "optionLabelAvatar": {},
                      "optionLabelBlock": {},
                      "optionLabelBullet": {},
                      "optionLabelBulletDanger": {},
                      "optionLabelBulletDisabled": {},
                      "optionLabelBulletPrimary": {},
                      "optionLabelBulletSuccess": {},
                      "optionLabelCustomIcon": {},
                      "optionLabelIcon": {},
                      "optionList": {},
                      "optionListGroup": {},
                      "optionListGroupLabel": {},
                      "optionSelect": {},
                      "optionSubLabel": {},
                      "optionTwoLines": {},
                      "root": {},
                    }
                  }
                  truncateOptions={true}
                  value={
                    {
                      "label": "Lorem ipsum 2",
                      "value": "lorem-ipsum-2",
                    }
                  }
                />
              }
              overlayClassName="HoiPoi__Popover__root-2-26 HoiPoi__SelectWrapper__Popover-2-1"
              placement="bottomLeft"
              prefixCls="hoi-poi-popover"
              transitionName="hoi-poi-popover--fade"
              trigger={
                [
                  "click",
                ]
              }
            >
              <Trigger
                action={
                  [
                    "click",
                  ]
                }
                afterPopupVisibleChange={[Function]}
                autoDestroy={false}
                blurDelay={0.15}
                builtinPlacements={
                  {
                    "bottom": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tc",
                        "bc",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "bottomLeft": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tl",
                        "bl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "bottomRight": {
                      "offset": [
                        0,
                        4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tr",
                        "br",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "left": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "cr",
                        "cl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "leftBottom": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "br",
                        "bl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "leftTop": {
                      "offset": [
                        -4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tr",
                        "tl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "right": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "cl",
                        "cr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "rightBottom": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bl",
                        "br",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "rightTop": {
                      "offset": [
                        4,
                        0,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "tl",
                        "tr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "top": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bc",
                        "tc",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "topLeft": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "bl",
                        "tl",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                    "topRight": {
                      "offset": [
                        0,
                        -4,
                      ],
                      "overflow": {
                        "adjustX": 1,
                        "adjustY": 1,
                      },
                      "points": [
                        "br",
                        "tr",
                      ],
                      "targetOffset": [
                        0,
                        0,
                      ],
                    },
                  }
                }
                defaultPopupVisible={false}
                destroyPopupOnHide={false}
                focusDelay={0}
                getDocument={[Function]}
                getPopupClassNameFromAlign={[Function]}
                hideAction={[]}
                mask={false}
                maskClosable={true}
                mouseEnterDelay={0}
                mouseLeaveDelay={0.1}
                onPopupAlign={[Function]}
                onPopupVisibleChange={[Function]}
                popup={[Function]}
                popupAlign={{}}
                popupClassName="HoiPoi__Popover__root-2-26 HoiPoi__SelectWrapper__Popover-2-1"
                popupPlacement="bottomLeft"
                popupStyle={{}}
                popupTransitionName="hoi-poi-popover--fade"
                prefixCls="hoi-poi-popover"
                showAction={[]}
              >
                <ForwardRef
                  iconPosition="left"
                  key="trigger"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                  overrides={{}}
                  size="medium"
                  type="primary"
                >
                  <button
                    className="HoiPoi__Button__root-2-27 HoiPoi__Button__primary-2-32 HoiPoi__Button__medium-2-40"
                    onClick={[Function]}
                    onMouseDown={[Function]}
                    onTouchStart={[Function]}
                    type="button"
                  >
                    <div
                      className="HoiPoi__Button__content-2-28"
                    >
                      <Text
                        className="HoiPoi__Button__Text-2-29"
                        isTruncated={false}
                        overrides={{}}
                        type="body"
                      >
                        <span
                          className="HoiPoi__Text__root-2-45 HoiPoi__Button__Text-2-29 HoiPoi__Text__body-2-55"
                          style={{}}
                        >
                          Select One
                        </span>
                      </Text>
                    </div>
                  </button>
                </ForwardRef>
              </Trigger>
            </ForwardRef(Tooltip)>
          </Popover>
        </div>
      </Component>
    </JssProvider>
  </ThemeProvider>
</Component>
`;
